<resources>
    <string name="app_name">Laika</string>
    <string name="app_name_dummy">Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika  Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika Laika</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1472555673060744</string>
    <string name="privacy_title">Polícitcas de privacidad</string>
    <string name="privacy_url">http://www.laika.social/privacy/</string>
    <string name="http_client_null_exception_message">Client must not be null.</string>
    <string name="generic_server_down_error">No se pudo conectar con el servidor</string>
    <string name="auth_failure_error">El correo o contraseña ingresados no son correctos</string>
    <string name="no_internet_error">Hubo un problema con tu conexión a internet</string>
    <string name="generic_networking_error">Hubo un error. Lo sentimos!</string>
    <string name="content_description_logo_image_view">Logo</string>
    <string name="login_submit">Ingresar</string>
    <string name="password">Contraseña</string>
    <string name="email_address">Correo</string>
    <string name="error_empty_search_query">You didn\'t enter the search field</string>
    <string name="not_valid_email_error">Este no es correo electrónico válido</string>
    <string name="email_error_activity">Lo sentimos! no podemos enviar el correo</string>
    <string name="field_not_empty_error">Debes completar esta información</string>
    <string name="password_min_length">La contraseña debe tener mínimo 8 caracteres</string>
    <string name="equal_password_field">Las contraseñas deben ser iguales</string>
    <string name="parameters_error">El correo o contraseña ingresados no son correctos</string>
    <string name="password_recovery_parameters_error">No hay cuenta asociada a este correo</string>
    <string name="must_select_reason">You must select a reason</string>
    <string name="must_select_responsible">You must select a responsible</string>
    <string name="btn_logout_from_google">Cerrar Sesión de Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="zero_number">0</string>
    <string name="accept_dialog">Aceptar</string>
    <string name="cancel_dialog">Cancelar</string>
    <string name="yes_dialog">Sí</string>
    <string name="no_dialog">No</string>
    <string name="confirm_dialog">Confirmar</string>
    <string name="empty_string"></string>
    <string name="search_button">Buscar</string>
    <string name="error_invalid_phone">Número de celular inválido</string>
    <string name="log_in_activity_name">Inicio de Sesión</string>
    <string name="user_log_in">Correo electrónico</string>
    <string name="password_log_in">Contraseña</string>
    <string name="register_log_in">Regístrate</string>
    <string name="forgot_log_in">¿Olvidaste tu contraseña?</string>
    <string name="register_success">¡Te has registrado exitosamente!</string>
    <string name="log_in">Ingresar</string>
    <string name="log_in2">Enviar</string>
    <string name="back_to_menu">Volver al menú principal</string>
    <string name="registered_description"></string>
    <string name="sign_in">Ingresa</string>
    <string name="sign_up">Regístrate</string>
    <string name="g_plus_log_in">Google</string>
    <string name="facebook_log_in">Facebook</string>
    <string name="camera">Cámara</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_surname_question">¿Cuál es tu nombre completo?</string>
    <string name="name_hint">Nombre</string>
    <string name="surname_hint">Apellidos</string>
    <string name="email_question">¿Cuál es tu correo electrónico?</string>
    <string name="gender_human_question">¿Cuál es tu género?</string>
    <string name="gender_human_male">Masculino</string>
    <string name="gender_human_female">Femenino</string>
    <string name="phone_question">¿Cuál es tu número de teléfono móvil? (opcional)</string>
    <string name="phone_example">Ejemplo: +56912345678</string>
    <string name="add_a_password_question">Agrega una contraseña</string>
    <string name="repeat_password_question">Repite tu contraseña</string>
    <string name="birthdate_question">Fecha de Nacimiento</string>
    <string name="sign_up_with_social_networks">o ingresa con tus redes sociales</string>
    <string name="register_user">Registrarse</string>
    <string name="update_user">Actualizar</string>
    <string name="edit_user_activity_name">Edita tu Perfil</string>
    <string name="main_activity_name">Laika</string>
    <string name="adopt_me_main">Adóptame</string>
    <string name="my_dog_me_main">Mi Perro</string>
    <string name="news_main">Noticias</string>
    <string name="tips_main">Tips</string>
    <string name="events_main">Eventos</string>
    <string name="stories_main">Historias</string>
    <string name="menu_activity_name">Menú</string>
    <string name="add_left_menu">Añadir nueva mascota</string>
    <string name="profile_left_menu">Mi perfil</string>
    <string name="sync_left_menu">Sincronizar</string>
    <string name="postulated_pets_left_menu">Mis Postulaciones</string>
    <string name="favourites_left_menu">Favoritos</string>
    <string name="adopt_user_activity_name">Formulario de Adopción</string>
    <string name="adopt_activity_name">Adopción</string>
    <string name="years_adopt_dog">Tres Años</string>
    <string name="sterilized_adopt_dog">Esterilizado</string>
    <string name="not_sterilized_adopt_dog">No Esterilizado</string>
    <string name="view_more_adopt_dog">Ver más</string>
    <string name="adopt_adopt_dog">Adoptar</string>
    <string name="postulate_adopt_dog">POSTULAR</string>
    <string name="info_adopt_dog">Info</string>
	<string name="view_more_story_adopt_dog">Es un perrito de tres años, que se encontraba en cal y canto. Es un perro de tamaño grande, muy sociable y excelente
	    guardián. Necesita un hogar cariñoso que lo reciba como uno más de la familia</string>
    <string name="foundation_stuka">Fundación Stuka</string>
    <string name="region_adopt_dog_form">¿A qué región perteneces?</string>
    <string name="city_adopt_dog_form">¿En qué comuna vives?</string>
    <string name="space_adopt_dog_form">¿Cómo es tu hogar?</string>
    <string name="free_time_adopt_dog_form">¿Cuánto tiempo diario tendrás para tu perro?</string>
    <string name="kids_adopt_dog_form">¿Vives con niños menores de 10 años?</string>
    <string name="elderly_adopt_dog_form">¿Vives con adultos mayores?</string>
    <string name="pets_adopt_dog_form">¿Vives con otras mascotas?</string>
    <string name="partners_adopt_dog_form">¿Cuántas personas viven en tu casa?</string>
    <string name="female_adopt_dog_form">Hembra</string>
    <string name="male_adopt_dog_form">Macho</string>
    <string name="yes_adopt_dog_form">Sí</string>
    <string name="no_adopt_dog_form">No</string>
    <string name="whatever_adopt_dog_form">Da Igual</string>
    <string name="size_adopt_dog_form">¿De qué tamaño?</string>
    <string name="personality_adopt_dog_form">¿De qué personalidad lo prefieres?</string>
    <string name="dog_adopt_dog_form">¿Qué perrito andas buscando?</string>
    <string name="owner_adopt_dog_form">Cuéntanos un poco de ti</string>
    <string name="congrats_adopt_dog_success">¡Felicidades</string>
    <string name="happy_news_adopt_dog_success">estará feliz con la noticia</string>
    <string name="contact_news_adopt_dog_success"></string>
    <string name="contact_news_adopt_dog_success_first">La</string>
    <string name="contact_news_adopt_dog_success_second">se contactará contigo dentro de 48 hrs.
                                                    a través de un correo. ¡Felicidades!</string>
    <string name="mail_adopt_dog_success">Revisa tu correo para confirmar y nos contactaremos contigo</string>
    <string name="waiting_postulated_status">En espera</string>
    <string name="accepted_postulated_status">Aceptada</string>
    <string name="adopted_postulated_status">Adoptado</string>
    <string name="disabled_postulated_status">No cumple requisitos</string>
    <string name="refused_postulated_status">Rechazada</string>
    <string name="revoked_postulated_status">Revocada</string>
    <string name="revoke_postulated_status">Revocar</string>
    <string name="delete_postulation">Eliminar postulación</string>
    <string name="new_dog_register_activity_name">Registro de Mascotas</string>
    <string name="edit_dog_register_activity_name">Edita tu Mascota</string>
    <string name="register_new_dog_register">Registro</string>
    <string name="name_new_dog_register">¿Cuál es el nombre de tu perro?</string>
    <string name="size_new_dog_register">¿De qué tamaño es?</string>
    <string name="personality_new_dog_register">¿Cómo es tu perro?</string>
    <string name="steralized_new_dog_register">¿Está esterilizado?</string>
    <string name="code_new_dog_register">¿Tiene chip?</string>
    <string name="picture_new_dog_register">Sube una foto de tu perro</string>
    <string name="name_hint_new_dog_register">Ejemplo: "Tony", "Filipo"&#8230;</string>
    <string name="chip_hint_new_dog_register">Ingresa el código del chip</string>
    <string name="birth_new_dog_register">¿Cuando nació?</string>
    <string name="smaller_new_dog_register">Muy Pequeño</string>
    <string name="small_new_dog_register">Pequeño</string>
    <string name="middle_new_dog_register">Mediano</string>
    <string name="big_new_dog_register">Grande</string>
    <string name="bigger_new_dog_register">Muy Grande</string>
    <string name="gender_new_dog_register">Sexo</string>
    <string name="weight_new_dog_register">Peso</string>
    <string name="weight_hint_new_dog_register">Ejemplo: "17"</string>
    <string name="breed_new_dog_register">¿De qué raza es?</string>
    <string name="add_new_dog_register">Añadir</string>
    <string name="congrats_new_dog_added">¡Felicitaciones! Haz agregado una nueva mascota: </string>
    <string name="give_in_adoption_activity_name">Dar en Adopción</string>
    <string name="name_give_in_adoption">Nombre del Perro</string>
    <string name="personality_give_in_adoption">Personalidad</string>
    <string name="story_give_in_adoption">Escribe su historia en 300 caracteres</string>
    <string name="publish_give_in_adoption">Publicar</string>
    <string name="my_dog_activity_name">Mis Mascotas</string>
    <string name="album_my_dog">Álbum</string>
    <string name="alimentation_my_dog">Alimentación</string>
    <string name="food_my_dog">Comida</string>
    <string name="owners_my_dog">Responsables</string>
    <string name="walk_my_dog">Paseos</string>
    <string name="health_my_dog">Salud</string>
    <string name="history_my_dog">Historial</string>
    <string name="create_reminder_my_dog">Crear Recordatorio</string>
    <string name="vet_visit_my_dog">Ficha Médica</string>
    <string name="create_vet_visit_my_dog">Crear Ficha Médica</string>
    <string name="reminders_my_dog">Recordatorios</string>
    <string name="poo_my_dog">Recoger Fecas</string>
    <string name="medicine_my_dog">Remedios</string>
    <string name="example_breed_my_dog">Pastor Alemán</string>
    <string name="gender_male">Macho</string>
    <string name="gender_female">Hembra</string>
    <string name="nav_adopt">Adopta</string>
    <string name="nav_profile">Mi perfil</string>
    <string name="nav_favorites">Mis favoritos</string>
    <string name="nav_my_postulations">Mis postulaciones</string>
    <string name="nav_sponsors">Colaboradores</string>
    <string name="nav_close_session">Cerrar sesión</string>
    <string name="nav_about_us">Acerca de</string>
</resources>